--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <h1>Позиционирование, слои</h1>
 <h2>Задание 1</h2>
 <img src="memecat1.jpg" alt="котик" class="task1">
-
+<h2>Задание 2</h2>
+<div  class="task2">
+<img src="memecat2.jpg" class="image2">
+<p class="text2">котик</p>
+</div>
 </body>
 </html>
