--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
 <img src="memecat2.jpg" class="image2">
 <p class="text2">котик</p>
 </div>
+<h2 class="task3">Задание 3</h2>
+<img src="memecat3.jpg" class="image3">
+
 </body>
 </html>
