--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 </div>
 <h2 class="task3">Задание 3</h2>
 <img src="memecat3.jpg" class="image3">
+<h2>Задание 4</h2>
+<div class="task4">         
+    <img src="memecat4.jpg" alt="котик" class="img1">
+    <img src="memecat5.jpg" alt="котик" class="img2">
+    <img src="memecat6.jpg" alt="котик" class="img3">
+</div>
 
 </body>
 </html>
