--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <img src="memecat5.jpg" alt="котик" class="img2">
     <img src="memecat6.jpg" alt="котик" class="img3">
 </div>
+<h2 class="header5">Задание 5</h2>
+<div class="task5">
+    <img src="newyear.jpg" class="image5">
+    <h3 class="text5">С Новым Годом!</h3>
+</div>
 
 </body>
 </html>
