--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     <img src="newyear.jpg" class="image5">
     <h3 class="text5">С Новым Годом!</h3>
 </div>
-
+<h2 class="header5">Задание 6</h2>
+<div class="task6">
+    <p class="text61"><i>Поздравляю!</i></p>
+    <p class="text62"><i>Поздравляю!</i></p>
+    <p class="text63"><i>Поздравляю!</i></p>    
+</div>
 </body>
 </html>
