--- a/index.html
+++ b/index.html
@@ -34,5 +34,10 @@
     <p class="text62"><i>Поздравляю!</i></p>
     <p class="text63"><i>Поздравляю!</i></p>    
 </div>
+<h2 class="header5">Задание 7</h2>
+<div class="task7">
+    <img src="happybirthday.png" class="image7">
+    <h3 class="text7">С Днем Рождения!</h3>
+</div>
 </body>
 </html>
