--- a/index.html
+++ b/index.html
@@ -39,5 +39,10 @@
     <img src="happybirthday.png" class="image7">
     <h3 class="text7">С Днем Рождения!</h3>
 </div>
+<h2 class="header5">Задание 8</h2>
+<div class="task8">
+    <img src="vibe.jpg" class="image8">
+    <h3 class="text8">Летом Вечером Вайбова</h3>
+</div>
 </body>
 </html>
